[package]
name = "date-range"
version = "0.3.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "DateRange"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/date-time-rs"
homepage = "https://github.com/bk-rs/date-time-rs"
documentation = "https://docs.rs/date-range"
keywords = []
categories = []
readme = "README.md"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
