[package]
name = "date-time-matrix"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Date Time Matrix"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/date-time-rs"
homepage = "https://github.com/bk-rs/date-time-rs"
documentation = "https://docs.rs/date-time-matrix"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = [ "with-chrono" ]

with-chrono = [ "chrono", "weekday/with-chrono", "hour/with-chrono" ]

[dependencies]
weekday = { version = "0.2", default-features = false, path = "../weekday" }
hour = { version = "0.1", default-features = false, path = "../hour" }

chrono = { version = "0.4", default-features = false, optional = true }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
