[package]
name = "hour"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "hour"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/date-time-rs"
homepage = "https://github.com/bk-rs/date-time-rs"
documentation = "https://docs.rs/hour"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = [ "with-chrono" ]

with-chrono = [ "chrono" ]
with-num-traits = [ "num-traits" ]

[dependencies]
chrono = { version = "0.4", default-features = false, optional = true }
num-traits = { version = "0.2", default-features = false, optional = true }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
