[package]
name = "minute"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "minute"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/date-time-rs"
homepage = "https://github.com/bk-rs/date-time-rs"
documentation = "https://docs.rs/minute"
keywords = []
categories = []
readme = "README.md"

[dependencies]
