[package]
name = "weekday"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Weekday"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/date-time-rs"
homepage = "https://github.com/bk-rs/date-time-rs"
documentation = "https://docs.rs/weekday"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = [ "with-chrono" ]

with-chrono = [ "chrono" ]
with-num-traits = [ "num-traits" ]
with-serde = [ "serde" ]

[dependencies]
chrono = { version = "0.4", default-features = false, optional = true }
num-traits = { version = "0.2", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
